added source reference

--- a/data/Number_theory/Large_Szpiro-ratios_of_elliptic_curves_over_Q/table.yaml
+++ b/data/Number_theory/Large_Szpiro-ratios_of_elliptic_curves_over_Q/table.yaml
@@ -81,6 +81,7 @@ Data properties:
   type: R
   complete: unknown (presumably not)
   sources:
+  - CITE{Nit98}
   - CITE{BenYaz12}
   - CITE{LMFDB}
   - CITE{M-ECDB}
