added comment that more data is available at Sutherland's webpage

--- a/data/Polynomials/Number_theory/Modular_polynomials_for_j-invariant/table.yaml
+++ b/data/Polynomials/Number_theory/Modular_polynomials_for_j-invariant/table.yaml
@@ -16,6 +16,8 @@ Parameters:
     constraints: $n \geq 1$
    
 Comments:
+  comment-more-data: >
+    More complete data is available at CITE{Suth}.
   
 Formulas: 
 
