added orthogonality comment

--- a/data/Polynomials/Chebyshev_polynomials_of_the_first_kind/table.yaml
+++ b/data/Polynomials/Chebyshev_polynomials_of_the_first_kind/table.yaml
@@ -13,6 +13,9 @@ Parameters:
     constraints: $n \geq 0$ 
          
 Comments:
+  comment-orthogonal: >
+    The $T_n$ are orthogonal with respect to the inner product
+    $\langle f,g\rangle = \int_{-1}^1 f(x)g(x)(1-x^2)^{-1/2} dx$.
   
 Formulas: 
   formula-recurrence: >
