added orthogonality comment

--- a/data/Polynomials/Chebyshev_polynomials_of_the_second_kind/table.yaml
+++ b/data/Polynomials/Chebyshev_polynomials_of_the_second_kind/table.yaml
@@ -13,7 +13,10 @@ Parameters:
     constraints: $n \geq 0$ 
          
 Comments:
-  
+  comment-orthogonal: >
+    The $U_n$ are orthogonal with respect to the inner product
+    $\langle f,g\rangle = \int_{-1}^1 f(x)g(x)(1-x^2)^{1/2} dx$.
+
 Formulas: 
   formula-recurrence: >
     $U_0(x) = 1$, 
@@ -40,7 +43,8 @@ Similar tables:
 Keywords:
   
 Tags:
-- Polynomial
+- polynomial
+- orthogonal polynomials
 
 Data properties:
   type: Z[]
