added link for n=4

--- a/data/Polynomials/Number_theory/Equations_of_Igusa_invariants_of_split_Jacobians/table.yaml
+++ b/data/Polynomials/Number_theory/Equations_of_Igusa_invariants_of_split_Jacobians/table.yaml
@@ -28,7 +28,7 @@ Comments:
   comment-sources: >
     The case $n=2$ is classical, 
     $n=3$ due to Kuhn CITE{Kuhn}, and
-    $n=4$ due to Bruin and Doerksen CITE{BrDo}.
+    $n=4$ due to Bruin and Doerksen CITE{BrDo} (not listed in this table due to the size, available at CITE{BrDoWeb}).
   
 Formulas: 
 
